# semiconductor-mrp-demo

./: .env.example  .env.keys.example  .gitignore  PRD.md  README.md  dev.sh  multi_agent_workflow.md  planner_workflow.md  start.command  workflow_description.md
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/agents/: __init__.py  agent1_intent_parser.py  agent2_bom_master.py  agent3_mrp_engine.py  agent4_plan_coordinator.py  agent5_exception_monitor.py  crew.py
backend/app/api/: __init__.py  alerts.py  chat.py  data.py  disruptions.py  metrics.py  mps.py  plans.py
backend/app/models/: __init__.py  bom.py  chat.py  disruption.py  material.py  metrics.py  mps.py  notification.py  plan.py
backend/app/modules/: __init__.py  bom_expander.py  conflict_analyzer.py  disruption_intake.py  intent_recognizer.py  logging_utils.py  material_master_fetcher.py  metrics_collector.py  mps_parser.py  mrp_engine.py  notification_service.py  plan_version_manager.py  shelf_life_monitor.py  srm_syncer.py
backend/app/schemas/: __init__.py
backend/scripts/: generate_sample_excels.py
backend/tests/: conftest.py  test_api_routes.py  test_bom_expander.py  test_conflict_analyzer.py  test_e2e.py  test_exception_modules.py  test_metrics_api_summary.py  test_metrics_collector.py  test_mps_parser.py  test_mrp_engine.py  test_plan_version_manager.py
data/samples/: sample_bom.xlsx  (+2 more)
docs/: design.md  proposal.md  tasks.md
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
(+35 files in other folders)
